--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,3 +29,4 @@ importFrom(stats,dnorm)
 importFrom(stats,pnorm)
 importFrom(stats,qnorm)
 importFrom(stats,uniroot)
+importFrom(utils,capture.output)
