Major redo of regression fucntions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,9 +15,12 @@ export(paretoXY)
 export(relWt)
 export(reliabate)
 export(rmatReg)
-export(rmatRegPE)
-export(solveWt)
-export(solveWtR2)
+export(rmatWtR2)
+export(solveBeta)
+export(solveR2)
+export(solveReg)
+export(solveWtCrit)
+export(solveWtPred)
 export(trModel)
 export(utilityB)
 export(utilityBcg)
